--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -150,8 +150,8 @@
                                 <h2><b>Ratio of Updates to Parameters: All Layers</b></h2>
                             </div>
                             <div class="box-content">
-                                <div id="sincos"  class="center" style="height:345px;" ></div>
-                                <p id="hoverdata"><b>Score:</b> <span id="y">0</span>, <b>Iteration:</b> <span id="x">0</span></p>
+                                <div id="updateRatioChart"  class="center" style="height:345px;" ></div>
+                                <p id="hoverdata"><b>Ratio:</b> <span id="yRatio">0</span>, <b>Iteration:</b> <span id="xRatio">0</span></p>
                             </div>
                         </div>
                         <!--End Ratio Table -->
