--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -19,11 +19,11 @@
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	  	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<link id="ie-style" href="/assets/css/ie.css" rel="stylesheet">
+		<link id="ie-style" href="/assets/css/ie.css" rel="stylesheet"/>
 	<![endif]-->
 
 	<!--[if IE 9]>
-		<link id="ie9style" href="/assets/css/ie9.css" rel="stylesheet">
+		<link id="ie9style" href="/assets/css/ie9.css" rel="stylesheet"/>
 	<![endif]-->
 
 </head>
@@ -274,18 +274,14 @@
 		<!-- Execute once on page load -->
 		<script>
             $(document).ready(function(){
-                renderSystemInformation();
-                renderJVMMemoryChart();
-                renderOffHeapMemoryChart();
+				renderSystemPage();
             });
         </script>
 
 		 <!--Execute periodically (every 2 sec) -->
 		<script>
             setInterval(function(){
-                renderSystemInformation()
-                renderJVMMemoryChart()
-                renderOffHeapMemoryChart()
+                renderSystemPage();
             }, 2000);
         </script>
 		 <!--End JavaScript-->
