--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingModel.scala.html
@@ -19,11 +19,11 @@
 	<!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
 	<!--[if lt IE 9]>
 	  	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<link id="ie-style" href="/assets/css/ie.css" rel="stylesheet">
+		<link id="ie-style" href="/assets/css/ie.css" rel="stylesheet"/>
 	<![endif]-->
 
 	<!--[if IE 9]>
-		<link id="ie9style" href="/assets/css/ie9.css" rel="stylesheet">
+		<link id="ie9style" href="/assets/css/ie9.css" rel="stylesheet"/>
 	<![endif]-->
 </head>
 
@@ -218,12 +218,15 @@
 		<script src="/assets/js/cytoscape.min.js"></script>
 		<script src="/assets/js/dagre.min.js"></script>
 		<script src="/assets/js/cytoscape-dagre.js"></script>
-		<!-- <script src="/assets/js/train/model-layers.js"></script> Layer graph generated here! -->
+		@*<script src="/assets/js/train/model-layers.js"></script> <!-- Layer graph generated here! -->*@
 		<script src="/assets/js/train/model.js"></script>        <!-- Charts and tables are generated here! -->
+
+        <script src="/assets/js/train/model-graph.js"></script> <!-- Layer graph generated here! -->
 
 		<!-- Execute once on page load -->
 		<script>
 				$(document).ready(function(){
+					renderModelGraph();
 					renderLayerTable();
 					renderModelPage();
 				});
