--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingSystem.scala.html
@@ -96,56 +96,67 @@
 							<div id="myTabContent" class="tab-content">
 								<div class="tab-pane active" id="machine1">
 
-									<!-- Memory Utilization -->
+									<!-- JVM Memory Utilization Chart -->
 									<div class="row-fluid">
 
-										<div class="span8 widget blue" onTablet="span7" onDesktop="span8">
-											<h1>@i18n.getMessage("train.system.chart.jvmTitle")</h1>
-											<div id="jvm-memory-chart"  style="height:282px" ></div>
+                                        <div class="box span6">
+                                            <div class="box-header">
+                                                <h2><b>@i18n.getMessage("train.system.chart.jvmTitle")</b></h2>
+                                            </div>
+                                            <div class="box-content">
+                                                <div id="jvmmemorychart" class="center" style="height: 300px;" ></div>
+                                                <p id="hoverdata"><b>JVM Memory:</b> <span id="y">0</span>, <b>Iteration:</b> <span id="x">0</span></p>
+                                            </div>
 										</div>
-
-										<!-- System Statistics -->
-										<div class="sparkLineStats span4 widget green" onTablet="span5" onDesktop="span4">
-											<h1>@i18n.getMessage("train.system.table.hardwareTitle")</h1>
-											<ul class="unstyled">
-												<li>
-													JVM Current Memory:
-													<span class="number" id="currentBytesJVM">Loading...</span>
-												</li>
-												<li>
-													JVM Max Memory:
-													<span class="number" id="maxBytesJVM">Loading...</span>
-												</li>
-												<li>
-													Off-Head Current Memory:
-													<span class="number" id="currentBytesOffHeap">Loading...</span>
-												</li>
-												<li>
-													Off-Heap Max Memory:
-													<span class="number" id="maxBytesOffHeap">Loading...</span>
-												</li>
-												<li>
-													JVM Available Processors:
-													<span class="number" id="jvmAvailableProcessors">Loading...</span>
-												</li>
-												<li>
-													# Compute Devices:
-													<span class="number" id="nComputeDevices">Loading...</span>
-												</li>
-											</ul>
-										</div>
-									</div>
-
-									<div class="row-fluid">
-										<!-- Off Heap Memory Utlization Chart -->
-										<div class="span8 widget yellow" onTablet="span7" onDesktop="span8">
-											<h1>@i18n.getMessage("train.system.chart.offHeapTitle")</h1>
-											<div id="off-heap-memory-chart"  style="height:282px" ></div>
-										</div>
+                                        <!-- Off Heap Memory Utlization Chart -->
+                                        <div class="box span6">
+                                            <div class="box-header">
+                                                <h2><b>@i18n.getMessage("train.system.chart.offHeapTitle")</b></h2>
+                                            </div>
+                                            <div class="box-content">
+                                                <div id="offheapmemorychart" class="center" style="height: 300px;" ></div>
+                                                <p id="hoverdata"><b>Off Heap Memory:</b> <span id="y2">0</span>, <b>Iteration:</b> <span id="x2">0</span></p>
+                                            </div>
+                                        </div>
 
 									</div>
 
-									<!-- Charts -->
+									<!-- Tables -->
+                                    <div class="row-fluid">
+
+                                        <!-- Hardware Information -->
+                                        <div class="box span12">
+                                            <div class="box-header">
+                                                <h2><b>@i18n.getMessage("train.system.table.hardwareTitle")</b></h2>
+                                            </div>
+                                            <div class="box-content">
+                                                <table class="table table-striped">
+                                                    <thead>
+                                                    <tr>
+                                                        <th>JVM Current Memory</th>
+                                                        <th>JVM Max Memory</th>
+                                                        <th>Off-Heap Current Memory</th>
+                                                        <th>Off-Heap Max Memory</th>
+                                                        <th>JVM Available Processors</th>
+                                                        <th># Compute Devices</th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                    <tr>
+                                                        <td id="currentBytesJVM">Loading...</td>
+                                                        <td id="maxBytesJVM">Loading...</td>
+                                                        <td id="currentBytesOffHeap">Loading...</td>
+                                                        <td id="maxBytesOffHeap">Loading...</td>
+                                                        <td id="jvmAvailableProcessors">Loading...</td>
+                                                        <td id="nComputeDevices">Loading...</td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                        </div>
+
+                                    </div>
+
 									<div class="row-fluid">
 
 										<!-- Software Information -->
