--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/views/org/deeplearning4j/ui/views/training/TrainingOverview.scala.html
@@ -147,18 +147,18 @@
                         <!--Start Ratio Table -->
                         <div class="box span6">
                             <div class="box-header">
-                                <h2><b>Ratio of Updates to Parameters: All Layers</b></h2>
+                                <h2><b>Log10 - Ratio of Updates to Parameters: All Layers</b></h2>
                             </div>
                             <div class="box-content">
                                 <div id="updateRatioChart"  class="center" style="height:300px;" ></div>
-                                <p id="hoverdata"><b>Ratio:</b> <span id="yRatio">0</span>, <b>Iteration:</b> <span id="xRatio">0</span></p>
+                                <p id="hoverdata"><b>Ratio:</b> <span id="yRatio">0</span>, <b>Log10 Ratio:</b> <span id="yLogRatio">0</span>, <b>Iteration:</b> <span id="xRatio">0</span></p>
                             </div>
                         </div>
                         <!--End Ratio Table -->
                         <!--Start Variance Table -->
                         <div class="box span6">
                             <div class="box-header">
-                                <h2><b>Variances</b></h2>
+                                <h2><b>Log10 - Variances</b></h2>
                                 <div style="float: right">
                                     <p class="stackControls center">
                                         <input class="btn btn-small" type="button" value="Activations">
@@ -174,7 +174,7 @@
                                     @*<input class="btn btn-small" type="button" value="Updates">*@
                                 @*</p>*@
                                 <div id="varianceChart"  class="center" style="height:300px;" ></div>
-                                <p id="hoverdata"><b>Score:</b> <span id="yVariance">0</span>, <b>Iteration:</b> <span id="xVariance">0</span></p>
+                                <p id="hoverdata"><b>Variance:</b> <span id="yVariance">0</span>, <b>Log10 Variance:</b> <span id="yLogVariance">0</span>, <b>Iteration:</b> <span id="xVariance">0</span></p>
                             </div>
                         </div>
                         <!-- End Variance Table -->
